--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!--
  * @Author: Jane
  * @Date: 2020-05-18 14:01:07
- * @LastEditors: Jane
- * @LastEditTime: 2020-06-11 16:34:18
+ * @LastEditors: Please set LastEditors
+ * @LastEditTime: 2021-02-23 17:09:23
  * @Descripttion:
 -->
 <!DOCTYPE html>
@@ -18,6 +18,7 @@
   <meta name="mobile-web-app-capable" content="yes" />
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title><%= htmlWebpackPlugin.options.title %></title>
+  <script src = 'https://webapi.amap.com/maps?v=2.0&key=92110f037aa6e7afe7e74f2dfc90eca4'></script>
 </head>
 
 <body>
